fix: update spacing for web forms

--- a/components/01-atoms/forms/_yds-form.scss
+++ b/components/01-atoms/forms/_yds-form.scss
@@ -36,4 +36,8 @@
 .webform-submission-form {
   padding-inline: var(--size-spacing-site-gutter);
   max-width: 80rem;
+
+  .component-wrapper & {
+    padding-inline: unset;
+  }
 }
